fixing bugs on tests and added news methods