@@ -1,10 +1,14 @@
 package zjg.marketplace.application.services.order;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+
+import reactor.test.StepVerifier;
+import zjg.marketplace.BlocKTimeOutConfig;
 import zjg.marketplace.application.dto.order.OrderInput;
 import zjg.marketplace.application.dto.order.OrderUpdateInput;
 import zjg.marketplace.application.resolver.facade.ServiceResolverFacade;
@@ -12,6 +16,7 @@ import zjg.marketplace.application.service.promisse.CreateService;
 import zjg.marketplace.application.service.promisse.DeleteService;
 import zjg.marketplace.application.service.promisse.FindService;
 import zjg.marketplace.application.service.promisse.UpdateService;
+import zjg.marketplace.core.entity.base.BaseEntity;
 import zjg.marketplace.core.logging.enums.OrderStatusEnum;
 import zjg.marketplace.core.order.entity.Order;
 import zjg.marketplace.core.product.entity.Product;
@@ -33,7 +38,6 @@ public class OrderCommandServiceTest {
         findUserService = facade.resolveFind(User.class);
         deleteService = facade.resolveDelete(Order.class);
     }
-    private static final Duration limit = Duration.ofSeconds(5);
     private static final List<String> productIds = new ArrayList<>();
     private static final List<String> orderIds = new ArrayList<>();
     private static String userId;
@@ -48,41 +52,54 @@ public class OrderCommandServiceTest {
     @Test
     @org.junit.jupiter.api.Order(1)
     public void get500Products() {
-        var list = findProductService.get(0, 500)
-                .map(Product::getId)
-                .collectList()
-                .block(limit);
-        productIds.addAll(list);
+        StepVerifier.create(findProductService.get(0, 100))
+                .recordWith(ArrayList::new)
+                .consumeRecordedWith(x -> {
+                    var list = x.stream().map(BaseEntity::getId).toList();
+                    productIds.addAll(list);
+                })
+                .thenConsumeWhile(user -> true)
+                .verifyComplete();
     }
     @Test
     @org.junit.jupiter.api.Order(2)
     public void get1User() {
-        userId =  findUserService.get(0,1)
-                .collectList()
-                .block(limit)
-                .get(0)
-                .getId();
+        StepVerifier.create(findUserService.get(0, 1))
+                .recordWith(ArrayList::new)
+                .consumeRecordedWith(x -> {
+                    var list = x.stream().map(BaseEntity::getId).toList();
+                    userId = list.getFirst();
+                })
+                .thenConsumeWhile(user -> true)
+                .verifyComplete();;
     }
     @Test
     @org.junit.jupiter.api.Order(3)
     public void insert500() {
+        var input = new OrderInput();
+        input.setProductInput(productIds);
+        input.setUserId(userId);
         for (var id : productIds) {
-            var input = new OrderInput();
-            System.out.println(id);
-            input.setProductInput(productIds);
-            input.setUserId(userId);
-            var o = createService.create(input).block(limit);
-            orderIds.add(o.getId());
+            StepVerifier.create(createService.create(input))
+                    .recordWith(ArrayList::new)
+                    .consumeRecordedWith(x -> {
+                        var list = x.stream().map(BaseEntity::getId).toList();
+                        orderIds.addAll(list);
+                    })
+                    .thenConsumeWhile(user -> true)
+                    .verifyComplete();
         }
     }
 
     @Test
     @org.junit.jupiter.api.Order(3)
     public void updateAllAdded() {
+        var input = new OrderUpdateInput();
+        input.setStatus(OrderStatusEnum.CANCELED);
         for (var id : orderIds) {
-            var input = new OrderUpdateInput();
-            input.setStatus(OrderStatusEnum.CANCELED);
-            updateService.update(input, id).block(limit);
+            StepVerifier.create(updateService.update(input, id))
+                    .thenConsumeWhile(user -> true)
+                    .verifyComplete();
         }
     }
 
@@ -90,7 +107,9 @@ public class OrderCommandServiceTest {
     @org.junit.jupiter.api.Order(3)
     public void removeAllAdded() {
         for (var id : orderIds) {
-            deleteService.deleteById(id).block(limit);
+            StepVerifier.create(deleteService.deleteById(id))
+                    .thenConsumeWhile(user -> true)
+                    .verifyComplete();
         }
     }
 }
